Added a base for documentation

--- a/public/index.html
+++ b/public/index.html
@@ -21,7 +21,7 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
-    <title>Viav Bot</title>
+    <title>Viav.js</title>
     <meta property="og:title" content="Viav" />
     <meta property="og:locale" content="en_US" />
     <meta name="description" content="Viav is a bot aimed at changing the way we use Discord forever." />
